--- a/.github/workflows/dotnet-core-b.yml
+++ b/.github/workflows/dotnet-core-b.yml
@@ -2,24 +2,26 @@ name: .NET Core - release flow - on-demand
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    #branches: [ master ]
+  #pull_request:
+    #branches: [ master ]
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 3.1.301
-    - name: Install dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
-    - name: Test
-      run: dotnet test --no-restore --verbosity normal
+    - run: ls -la
+    - run: env
+    #- uses: actions/checkout@v2
+    #- name: Setup .NET Core
+      #uses: actions/setup-dotnet@v1
+      #with:
+        #dotnet-version: 3.1.301
+    #- name: Install dependencies
+      #run: dotnet restore
+    #- name: Build
+      #run: dotnet build --configuration Release --no-restore
+    #- name: Test
+      #run: dotnet test --no-restore --verbosity normal
