--- a/.github/workflows/dotnet-core-release-flow.yml
+++ b/.github/workflows/dotnet-core-release-flow.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
     - run: ls -la
     - run: env
+    - run: docker ps
     #- uses: actions/checkout@v2
     #- name: Setup .NET Core
       #uses: actions/setup-dotnet@v1
