--- a/.github/workflows/dotnet-core-release-flow.yml
+++ b/.github/workflows/dotnet-core-release-flow.yml
@@ -20,7 +20,8 @@ jobs:
 
     steps:
     - run: ls -la
-    - run: echo name: ${{ github.event.inputs.name }}
+    - run: |
+        echo "name: '${{ github.event.inputs.name }}'"
     - run: env
     - run: docker ps
     #- uses: actions/checkout@v2
