github-actions-poc

--- a/.gitignore
+++ b/.gitignore
@@ -247,3 +247,5 @@ ModelManifest.xml
 # Migrations folder
 Scheduler.API/Migrations
 /Scheduler.API/Properties/PublishProfiles
+
+# test-release-v0.2.0
